--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ license = "GPL 3.0"
 
 [tool.poetry.dependencies]
 python = "^3.8"
+requests = "^2.28.1"
+beautifulsoup4 = "^4.11.1"
 
 [tool.poetry.dev-dependencies]
 
