--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ license = "GPL 3.0"
 python = "^3.8"
 requests = "^2.28.1"
 beautifulsoup4 = "^4.11.1"
+mcstatus = "^9.4.0"
+cached-property = "^1.5.2"
+psutil = "^5.9.1"
 
 [tool.poetry.dev-dependencies]
 
