--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,13 @@ license = "GPL 3.0"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-requests = "^2.28.1"
 beautifulsoup4 = "^4.11.1"
 mcstatus = "^9.4.0"
 cached-property = "^1.5.2"
 psutil = "^5.9.1"
+aiofile = "^3.8.1"
+aiohttp = "^3.8.1"
+aioconsole = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 
