Add readme and homepage to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 description = "Module for interacting with Minecraft servers"
 authors = ["Dummerle", "M0rica"]
 license = "GPL 3.0"
+readme = "README.md"
+repository = "https://github.com/Uncooldevs/mc-server-interaction"
+homepage = "https://github.com/Uncooldevs/mc-server-interaction"
 
 [tool.poetry.dependencies]
 python = "^3.8"
