--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "mc_server_interaction"
 version = "0.1.2"
 description = "Module for interacting with Minecraft servers"
 authors = ["Dummerle", "M0rica"]
-license = "GPL 3.0"
+license = "GPL-3.0-or-later"
 readme = "README.md"
 repository = "https://github.com/Uncooldevs/mc-server-interaction"
 homepage = "https://github.com/Uncooldevs/mc-server-interaction"
