--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,10 @@ python = "^3.8"
 beautifulsoup4 = "^4.11.1"
 mcstatus = "^9.4.0"
 cached-property = "^1.5.2"
-psutil = "^5.9.1"
-aiofile = "^3.8.1"
+psutil = "^5.9.2"
 aiohttp = "^3.8.1"
 aioconsole = "^0.5.0"
+aiofiles = "^22.1.0"
 
 [tool.poetry.dev-dependencies]
 
